# src/controllers/userController/dto.go
@@ -1,6 +1,9 @@
 package userController
 
-import "sm-access/src/models"
+import (
+	"sm-access/src/models"
+	"sm-access/src/service/queryService"
+)
 
 type User struct {
 	models.BaseModel
@@ -13,5 +16,26 @@ type CreateOneRequest struct {
 }
 
 type CreateOneResponse struct {
-	User User
+	User User `json:"user"`
+}
+
+type GetOneResponse struct {
+	User User `json:"user"`
+}
+
+type GetManyResponse struct {
+	Meta queryService.Meta `json:"meta"`
+	Users []User `json:"users"`
+}
+
+type UpdateOneRequest struct {
+	Username      string `json:"username"`
+}
+
+type UpdateOneResponse struct {
+	User User `json:"user"`
+}
+
+type DeleteOneResponse struct {
+	Message string `json:"message"`
 }
